--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
       <button id="btnControl">🔒 Control de Trimestres</button>
 
-      <button id="btnCalificacionesReales">📘 Calificaciones Reales</button>
+      <button id="btnCalificacionesReales">📘 Calificaciones Camino a Casa</button>
     </div>
   </div>
 
